finish obs overlay